# Trydan_Modbus_TCP

./: README.md  pyproject.toml
home-assistant/: README.md
home-assistant/custom_components/: configuration.yaml
home-assistant/custom_components/v2c/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py  strings.json
src/v2ctrydan/: LICENSE  __init__.py  modbus.py
