[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "v2ctrydan"
version = "0.1.3"
authors = [
  { name="Jesus Llorens", email="jesusllorens79@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jesusllorens79/v2ctrydan"
"Bug Tracker" = "https://github.com/jesusllorens79/v2ctrydan/issues"
